modificati metodi "getExerciseIdsByName" e createExercise, aggiunta classe ExerciseAlreadyExistingException per gestire il caso in cui venga creato un exercise con lo stesso nome di uno già esistente.